welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:9: error: ')' expected but ';' found.
		else (droite(); avance(); gauche(); avance(););
                              ^Balin:9: error: illegal start of statement
		else (droite(); avance(); gauche(); avance(););
                                                             ^Balin:21: error: ')' expected but ';' found.
		else (droite(); avance(); gauche(); avance(););    
                              ^Balin:21: error: illegal start of statement
		else (droite(); avance(); gauche(); avance(););    
                                                             ^Balin:26: error: illegal start of statement
		else (droite(); avance(); gauche(); avance(););
                                                             ^